# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract concise factual knowledge from the source text."
      INSTRUCTION_QUERY = "Create a focused query that captures the user's information need."
      INSTRUCTION_RESPONSE = "Answer clearly and briefly using only relevant retrieved knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              self.store.append(item.raw)
              self.toolkit.logger.debug(f"Stored: {item.raw[:80]}")
      
          def read(self, query: Query) -> str:
              result = "\n".join(self.store[-20:]) if self.store else "No information stored."
              return result[:1000]
  
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract the most important factual information from the source text as a concise knowledge item."
      INSTRUCTION_QUERY = "Formulate a focused retrieval query that captures the user's information need."
      INSTRUCTION_RESPONSE = "Provide a concise, direct answer using only relevant retrieved knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              processed = item.raw if item.raw else raw_text
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              return ("\n".join(self.store))[:1000] if self.store else "No information stored."
  
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'green apple',
  })
# ---
# name: test_knowledge_item_generation
  dict({
    'output': '{"summary":"The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create a KnowledgeItem to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The KnowledgeItem must conform to this schema:
      // KnowledgeItem: A summary of what was learnt from the source text.
      {
        "summary": "..."  // str, What you have learnt from the text
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_knowledge_item_with_feedback
  dict({
    'output': '{"summary":"The correct answer to the question referenced in the evaluation is Paris."}',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate a knowledge item to write into memory.
      
      The knowledge item must be a JSON object matching this schema:
      // KnowledgeItem: A summary of what was learnt from the source text.
      {
        "summary": "..."  // str, What you have learnt from the text
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_patch_generation_compile_fix
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5]) if self.store else "No information stored."
  
    ''',
    'output': '''
      *** Begin Patch
      *** Update File: program.py
      @@
           def read(self, query: Query) -> str:
      -        # Bug: missing closing parenthesis
      -        return "\n".join(self.store[:5] if self.store else "No information stored."
      +        # Bug: missing closing parenthesis
      +        return "\n".join(self.store[:5]) if self.store else "No information stored."
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
      Fix the error and output your fix as a patch.
      
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      
      Rules:
      1. Output ONLY the fix as a patch. No explanation needed.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
      4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
      
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      
      ## Broken Code
      
      ```python
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored."
      
      ```
      
      ## Error
      
      **Syntax error**: '(' was never closed (<unknown>, line 29)
      
      Fix the error and output your fix as a patch.
    ''',
  })
# ---
# name: test_patch_generation_reflection
  dict({
    'output': '''
      Diagnosis:
      The knowledge base was simply appending every summary and raw text and returning them verbatim, so queries couldn’t retrieve specific facts such as “Alice’s favorite color.” There was no structured schema for knowledge or queries beyond a single summary string, no storage/indexing, and no search logic, so read() always returned the entire (truncated) history regardless of the question. To fix this we need a richer KnowledgeItem/Query schema, persistent storage with indexing, keyword-based retrieval, and output truncation with logging—plus clearer instructions to the task LLM.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      -
      -INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      -
      -
      -@dataclass
      -class KnowledgeItem:
      -    """A summary of what was learnt from the source text."""
      -    summary: str = field(metadata={"description": "What you have learnt from the text"})
      -
      -
      -@dataclass
      -class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      -
      -
      -class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      -
      -    def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.summaries: list[str] = []
      -        self.observations: list[str] = []
      -
      -    def write(self, item: KnowledgeItem, raw_text: str) -> None:
      -        self.summaries.append(item.summary)
      -        self.observations.append(raw_text)
      -        self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      -
      -    def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
      -        if not self.summaries and not self.observations:
      -            return "No information stored."
      -        summary_text = "\n".join(self.summaries)[:500]
      -        observation_text = "\n".join(self.observations)[:499]
      -        return summary_text + "\n" + observation_text
      +import json
      +import sqlite3
      +from dataclasses import dataclass, field
      +from typing import List, Optional
      +
      +INSTRUCTION_KNOWLEDGE_ITEM = (
      +    "Read the source text and extract a concise fact plus the most relevant keywords that "
      +    "will help later retrieval. Capture any source identifier if present."
      +)
      +INSTRUCTION_QUERY = (
      +    "Translate the user’s question into a list of important keywords or concepts. "
      +    "If there is a narrower focus, include it so the retrieval can be guided precisely."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Answer using only the retrieved knowledge, citing facts briefly and clearly. "
      +    "If no stored information applies, reply with 'No information found.' Keep answers short."
      +)
      +ALWAYS_ON_KNOWLEDGE = (
      +    "Always consult the persisted knowledge before guessing, and mention when information is missing."
      +)
      +
      +
      +@dataclass
      +class KnowledgeItem:
      +    """Structured knowledge captured from each source when writing new memories."""
      +    summary: str = field(metadata={"description": "Concise summary of the key fact learned"})
      +    tags: List[str] = field(
      +        default_factory=list,
      +        metadata={"description": "Keywords or topics that best describe the fact"},
      +    )
      +    source_id: Optional[str] = field(
      +        default=None, metadata={"description": "Optional identifier for the raw source text"}
      +    )
      +
      +
      +@dataclass
      +class Query:
      +    """Structured query parameters used for knowledge retrieval."""
      +    keywords: List[str] = field(
      +        default_factory=list,
      +        metadata={"description": "Important keywords that should appear in relevant knowledge"},
      +    )
      +    focus: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Optional clarifying detail to bias the search toward specific facts"},
      +    )
      +
      +
      +class KnowledgeBase:
      +    """Knowledge base that persists structured items in SQLite and retrieves them via keyword matching."""
      +
      +    def __init__(self, toolkit):
      +        self.toolkit = toolkit
      +        self.db: sqlite3.Connection = toolkit.db
      +        # Create a simple table with tags stored as JSON so we can search summaries/raw efficiently.
      +        self.db.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS knowledge (
      +                summary TEXT NOT NULL,
      +                tags TEXT NOT NULL,
      +                source_id TEXT,
      +                raw TEXT NOT NULL
      +            )
      +            """
      +        )
      +        self.db.execute("CREATE INDEX IF NOT EXISTS idx_summary ON knowledge(summary)")
      +        self.db.execute("CREATE INDEX IF NOT EXISTS idx_raw ON knowledge(raw)")
      +        self.db.commit()
      +
      +    def write(self, item: KnowledgeItem, raw_text: str) -> None:
      +        """Store the structured item along with the original text for future retrieval."""
      +        tags_json = json.dumps(item.tags)
      +        self.db.execute(
      +            "INSERT INTO knowledge (summary, tags, source_id, raw) VALUES (?, ?, ?, ?)",
      +            (item.summary, tags_json, item.source_id, raw_text),
      +        )
      +        self.db.commit()
      +        self.toolkit.logger.debug(
      +            f"Stored knowledge summary='{item.summary[:50]}...' with tags={item.tags} source={item.source_id}"
      +        )
      +
      +    def read(self, query: Query) -> str:
      +        """Find the most relevant stored summaries via keyword matching, then return a concise digest."""
      +        self.toolkit.logger.debug(
      +            f"Retrieving knowledge with keywords={query.keywords} focus={query.focus}"
      +        )
      +
      +        params = []
      +        where_clauses = []
      +
      +        def add_like_clause(value: str) -> str:
      +            """Helper to add case-insensitive LIKE clauses safely."""
      +            sanitized = f"%{value.strip().lower()}%" if value.strip() else "%"
      +            params.extend([sanitized, sanitized])
      +            return "(LOWER(summary) LIKE ? OR LOWER(raw) LIKE ?)"
      +
      +        for keyword in query.keywords:
      +            if keyword:
      +                where_clauses.append(add_like_clause(keyword))
      +
      +        if query.focus:
      +            where_clauses.append(add_like_clause(query.focus))
      +
      +        if where_clauses:
      +            sql = f"""
      +                SELECT summary, raw FROM knowledge
      +                WHERE {" OR ".join(where_clauses)}
      +                ORDER BY rowid DESC
      +                LIMIT 5
      +            """
      +        else:
      +            sql = """
      +                SELECT summary, raw FROM knowledge
      +                ORDER BY rowid DESC
      +                LIMIT 5
      +            """
      +
      +        rows = list(self.db.execute(sql, params))
      +        if not rows:
      +            self.toolkit.logger.debug("Read found no matching knowledge.")
      +            return "No information found."
      +
      +        self.toolkit.logger.debug(f"Read returned {len(rows)} candidate(s).")
      +
      +        parts = []
      +        for idx, (summary, raw) in enumerate(rows, 1):
      +            snippet = raw.strip().split("\n", 1)[0][:80]
      +            parts.append(f"{idx}. {summary} (source snippet: {snippet})")
      +
      +        result = "\n".join(parts)
      +        if len(result) > 1000:
      +            result = result[:997].rstrip() + "..."
      +
      +        return result
      *** End Patch
    ''',
    'patched_code': '''
      import json
      import sqlite3
      from dataclasses import dataclass, field
      from typing import List, Optional
      
      INSTRUCTION_KNOWLEDGE_ITEM = (
          "Read the source text and extract a concise fact plus the most relevant keywords that "
          "will help later retrieval. Capture any source identifier if present."
      )
      INSTRUCTION_QUERY = (
          "Translate the user’s question into a list of important keywords or concepts. "
          "If there is a narrower focus, include it so the retrieval can be guided precisely."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using only the retrieved knowledge, citing facts briefly and clearly. "
          "If no stored information applies, reply with 'No information found.' Keep answers short."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Always consult the persisted knowledge before guessing, and mention when information is missing."
      )
      
      
      @dataclass
      class KnowledgeItem:
          """Structured knowledge captured from each source when writing new memories."""
          summary: str = field(metadata={"description": "Concise summary of the key fact learned"})
          tags: List[str] = field(
              default_factory=list,
              metadata={"description": "Keywords or topics that best describe the fact"},
          )
          source_id: Optional[str] = field(
              default=None, metadata={"description": "Optional identifier for the raw source text"}
          )
      
      
      @dataclass
      class Query:
          """Structured query parameters used for knowledge retrieval."""
          keywords: List[str] = field(
              default_factory=list,
              metadata={"description": "Important keywords that should appear in relevant knowledge"},
          )
          focus: Optional[str] = field(
              default=None,
              metadata={"description": "Optional clarifying detail to bias the search toward specific facts"},
          )
      
      
      class KnowledgeBase:
          """Knowledge base that persists structured items in SQLite and retrieves them via keyword matching."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.db: sqlite3.Connection = toolkit.db
              # Create a simple table with tags stored as JSON so we can search summaries/raw efficiently.
              self.db.execute(
                  """
                  CREATE TABLE IF NOT EXISTS knowledge (
                      summary TEXT NOT NULL,
                      tags TEXT NOT NULL,
                      source_id TEXT,
                      raw TEXT NOT NULL
                  )
                  """
              )
              self.db.execute("CREATE INDEX IF NOT EXISTS idx_summary ON knowledge(summary)")
              self.db.execute("CREATE INDEX IF NOT EXISTS idx_raw ON knowledge(raw)")
              self.db.commit()
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              """Store the structured item along with the original text for future retrieval."""
              tags_json = json.dumps(item.tags)
              self.db.execute(
                  "INSERT INTO knowledge (summary, tags, source_id, raw) VALUES (?, ?, ?, ?)",
                  (item.summary, tags_json, item.source_id, raw_text),
              )
              self.db.commit()
              self.toolkit.logger.debug(
                  f"Stored knowledge summary='{item.summary[:50]}...' with tags={item.tags} source={item.source_id}"
              )
      
          def read(self, query: Query) -> str:
              """Find the most relevant stored summaries via keyword matching, then return a concise digest."""
              self.toolkit.logger.debug(
                  f"Retrieving knowledge with keywords={query.keywords} focus={query.focus}"
              )
      
              params = []
              where_clauses = []
      
              def add_like_clause(value: str) -> str:
                  """Helper to add case-insensitive LIKE clauses safely."""
                  sanitized = f"%{value.strip().lower()}%" if value.strip() else "%"
                  params.extend([sanitized, sanitized])
                  return "(LOWER(summary) LIKE ? OR LOWER(raw) LIKE ?)"
      
              for keyword in query.keywords:
                  if keyword:
                      where_clauses.append(add_like_clause(keyword))
      
              if query.focus:
                  where_clauses.append(add_like_clause(query.focus))
      
              if where_clauses:
                  sql = f"""
                      SELECT summary, raw FROM knowledge
                      WHERE {" OR ".join(where_clauses)}
                      ORDER BY rowid DESC
                      LIMIT 5
                  """
              else:
                  sql = """
                      SELECT summary, raw FROM knowledge
                      ORDER BY rowid DESC
                      LIMIT 5
                  """
      
              rows = list(self.db.execute(sql, params))
              if not rows:
                  self.toolkit.logger.debug("Read found no matching knowledge.")
                  return "No information found."
      
              self.toolkit.logger.debug(f"Read returned {len(rows)} candidate(s).")
      
              parts = []
              for idx, (summary, raw) in enumerate(rows, 1):
                  snippet = raw.strip().split("\n", 1)[0][:80]
                  parts.append(f"{idx}. {summary} (source snippet: {snippet})")
      
              result = "\n".join(parts)
              if len(result) > 1000:
                  result = result[:997].rstrip() + "..."
      
              return result
  
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, identify the root cause of each failure and improve the program.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """A summary of what was learnt from the source text."""
          summary: str = field(metadata={"description": "What you have learnt from the text"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.summaries: list[str] = []
              self.observations: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              self.summaries.append(item.summary)
              self.observations.append(raw_text)
              self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
              if not self.summaries and not self.observations:
                  return "No information stored."
              summary_text = "\n".join(self.summaries)[:500]
              observation_text = "\n".join(self.observations)[:499]
              return summary_text + "\n" + observation_text
      
      ```
      </current_program>
      
      <evaluation_score>0.200</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is Alice's favorite color?</question>
      <expected>blue</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is Alice's favorite color?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '{"raw":"capital of France"}',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis:
      The current knowledge base simply appends every incoming summary and observation to in-memory lists, then returns the entire stored content regardless of the query text. As a result, questions like “What is the capital of France?” cannot be answered because `read()` never searches the stored knowledge—it just dumps what was written, and it doesn’t match the user’s question. We therefore need to persist knowledge in SQLite for structured retrieval, add a query-driven search over summaries/details/raw text, and trim the response so the answer is focused and stays within the 1000-character limit.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      -
      -INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      -
      -
      -@dataclass
      -class KnowledgeItem:
      -    """A summary of what was learnt from the source text."""
      -    summary: str = field(metadata={"description": "What you have learnt from the text"})
      -
      -
      -@dataclass
      -class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      -
      -
      -class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      -
      -    def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.summaries: list[str] = []
      -        self.observations: list[str] = []
      -
      -    def write(self, item: KnowledgeItem, raw_text: str) -> None:
      -        self.summaries.append(item.summary)
      -        self.observations.append(raw_text)
      -        self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      -
      -    def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
      -        if not self.summaries and not self.observations:
      -            return "No information stored."
      -        summary_text = "\n".join(self.summaries)[:500]
      -        observation_text = "\n".join(self.observations)[:499]
      -        return summary_text + "\n" + observation_text
      +import json
      +from dataclasses import dataclass, field
      +from typing import List, Optional
      +
      +INSTRUCTION_KNOWLEDGE_ITEM = (
      +    "Extract the most important fact from the text, add relevant supporting details, and list descriptive topics. "
      +    "Return JSON that conforms to the KnowledgeItem schema."
      +)
      +INSTRUCTION_QUERY = (
      +    "Translate the user's request into keywords and a desired number of top matches using JSON that conforms to the Query schema."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Answer in 1-3 concise sentences by summarizing only the retrieved knowledge and citing its source. "
      +    "Keep the response under 1000 characters."
      +)
      +ALWAYS_ON_KNOWLEDGE = "Always search the knowledge base for evidence before answering a user question."
      +
      +
      +@dataclass
      +class KnowledgeItem:
      +    """Structured facts extracted from a text source."""
      +    summary: str = field(metadata={"description": "A single-sentence summary capturing the most important fact from the text."})
      +    details: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Supporting or contextual details that augment the main summary."},
      +    )
      +    source: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "The origin of the information, such as a document title or URL."},
      +    )
      +    topics: List[str] = field(
      +        default_factory=list,
      +        metadata={"description": "Keywords or tags that describe the main concepts discussed in the text."},
      +    )
      +
      +
      +@dataclass
      +class Query:
      +    """Structured parameters for retrieving knowledge."""
      +    keywords: List[str] = field(
      +        default_factory=list,
      +        metadata={"description": "Keywords that describe the user's question or intent."},
      +    )
      +    top_k: int = field(
      +        default=3,
      +        metadata={"description": "Maximum number of matching knowledge items to return (1-5)."},
      +    )
      +
      +
      +class KnowledgeBase:
      +    """A SQLite-backed knowledge base that supports keyword filtering and bounded responses."""
      +
      +    def __init__(self, toolkit):
      +        self.toolkit = toolkit
      +        # Keep responses under 1000 characters by trimming the assembled answer.
      +        self._max_response_chars = 950
      +        cursor = self.toolkit.db.cursor()
      +        # Persist summaries, details, topics, and raw text so that queries can search by keyword.
      +        cursor.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS knowledge (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                summary TEXT NOT NULL,
      +                details TEXT,
      +                source TEXT,
      +                topics TEXT,
      +                raw_text TEXT NOT NULL
      +            )
      +            """
      +        )
      +        self.toolkit.db.commit()
      +
      +    def write(self, item: KnowledgeItem, raw_text: str) -> None:
      +        cursor = self.toolkit.db.cursor()
      +        topics_json = json.dumps(item.topics or [])
      +        cursor.execute(
      +            """
      +            INSERT INTO knowledge (summary, details, source, topics, raw_text)
      +            VALUES (?, ?, ?, ?, ?)
      +            """,
      +            (item.summary, item.details, item.source, topics_json, raw_text),
      +        )
      +        self.toolkit.db.commit()
      +        self.toolkit.logger.debug(f"Stored knowledge: {item.summary}")
      +
      +    def read(self, query: Query) -> str:
      +        cursor = self.toolkit.db.cursor()
      +        base_query = "SELECT summary, details, source, topics, raw_text FROM knowledge"
      +        params: List[str] = []
      +        conditions: List[str] = []
      +        if query.keywords:
      +            # Build a WHERE clause that ensures every keyword appears in at least one searchable field.
      +            for keyword in query.keywords:
      +                like_pattern = f"%{keyword}%"
      +                search_fields = ["summary", "details", "source", "raw_text"]
      +                field_conditions = []
      +                for field_name in search_fields:
      +                    field_conditions.append(f"{field_name} LIKE ?")
      +                    params.append(like_pattern)
      +                conditions.append("(" + " OR ".join(field_conditions) + ")")
      +        if conditions:
      +            base_query += " WHERE " + " AND ".join(conditions)
      +        limit = max(1, min(query.top_k, 5))
      +        base_query += " ORDER BY id DESC LIMIT ?"
      +        params.append(str(limit))
      +        rows = cursor.execute(base_query, params).fetchall()
      +        self.toolkit.logger.debug(f"Query keywords={query.keywords} returning {len(rows)} rows.")
      +        if not rows:
      +            return "No matching knowledge stored."
      +
      +        snippets: List[str] = []
      +        for summary, details, source, topics_json, raw_text in rows:
      +            topic_list = json.loads(topics_json or "[]")
      +            snippet_parts = [summary]
      +            if details:
      +                snippet_parts.append(details)
      +            if source:
      +                snippet_parts.append(f"Source: {source}")
      +            if topic_list:
      +                snippet_parts.append("Topics: " + ", ".join(topic_list))
      +            if raw_text:
      +                excerpt = raw_text.replace("\n", " ").strip()
      +                if len(excerpt) > 120:
      +                    excerpt = excerpt[:120] + "…"
      +                snippet_parts.append(f"Excerpt: {excerpt}")
      +            snippet = " | ".join(snippet_parts)
      +            if len(snippet) > 400:
      +                snippet = snippet[:400] + "…"
      +            projected = "\n".join(snippets + [snippet])
      +            if len(projected) > self._max_response_chars:
      +                break
      +            snippets.append(snippet)
      +        result = "\n".join(snippets)[: self._max_response_chars]
      +        return result if result else "No matching knowledge stored."
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, identify the root cause of each failure and improve the program.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """A summary of what was learnt from the source text."""
          summary: str = field(metadata={"description": "What you have learnt from the text"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.summaries: list[str] = []
              self.observations: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              self.summaries.append(item.summary)
              self.observations.append(raw_text)
              self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
              if not self.summaries and not self.observations:
                  return "No information stored."
              summary_text = "\n".join(self.summaries)[:500]
              observation_text = "\n".join(self.observations)[:499]
              return summary_text + "\n" + observation_text
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      from dataclasses import dataclass, field
      import re
      
      INSTRUCTION_KNOWLEDGE_ITEM = (
          "Extract a concise factual memory from the provided text. Preserve exact "
          "identifiers, codes, names, and numbers when present."
      )
      INSTRUCTION_QUERY = (
          "Create a short retrieval query containing the key entities and terms needed "
          "to find the requested fact."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using the retrieved memory. Be concise and factual. If a specific value "
          "like a code is requested, return it exactly."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Prefer exact lexical matching for factual recall (codes, IDs, names, dates). "
          "When uncertain, do not invent values."
      )
      
      
      @dataclass
      class KnowledgeItem:
          # Single JSON-safe text field keeps extraction robust while still allowing
          # arbitrary facts to be captured.
          raw: str = field(
              metadata={"description": "A concise factual statement to store in memory."}
          )
      
      
      @dataclass
      class Query:
          # Query text used for deterministic lexical retrieval.
          raw: str = field(
              metadata={"description": "A short text query describing the fact to retrieve."}
          )
      
      
      class KnowledgeBase:
          """Lightweight lexical memory with deterministic retrieval."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              # Store raw text plus normalized tokens for fast overlap scoring.
              self.store: list[dict] = []
      
          def _tokenize(self, text: str) -> list[str]:
              # Simple tokenizer: lowercased alphanumerics only.
              # Deterministic and fast, avoiding LLM calls in read/write.
              return re.findall(r"[a-z0-9]+", text.lower())
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              # Prefer structured extraction, but fall back to source text if needed.
              text = (item.raw or "").strip() or (raw_text or "").strip()
              if not text:
                  self.toolkit.logger.debug("Write skipped: empty knowledge item.")
                  return
              self.store.append({"text": text, "tokens": set(self._tokenize(text))})
              self.toolkit.logger.debug(f"Stored item. chars={len(text)} total={len(self.store)}")
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self.toolkit.logger.debug(f"Read query='{q[:80]}' store_size={len(self.store)}")
      
              if not self.store:
                  return "No relevant information found."
              if not q:
                  # Safe fallback: return most recent item, bounded.
                  text = self.store[-1]["text"]
                  return text[:1000] if len(text) <= 1000 else text[:997] + "..."
      
              q_tokens = set(self._tokenize(q))
              q_lower = q.lower()
              scored = []
              for idx, row in enumerate(self.store):
                  overlap = len(q_tokens & row["tokens"]) if q_tokens else 0
                  phrase_bonus = 3 if q_lower and q_lower in row["text"].lower() else 0
                  score = overlap + phrase_bonus
                  if score > 0:
                      # Recency tie-breaker via idx.
                      scored.append((score, idx, row["text"]))
      
              if not scored:
                  return "No relevant information found."
      
              scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
              top_texts = []
              seen = set()
              for _, _, txt in scored:
                  if txt not in seen:
                      seen.add(txt)
                      top_texts.append(txt)
                  if len(top_texts) >= 3:
                      break
      
              result = "\n".join(top_texts)
              # Hard cap required by runtime constraints.
              return result[:1000] if len(result) <= 1000 else result[:997] + "..."
  
    ''',
    'round1_score': 0.0,
    'round2_output': 'DELTA-7742',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '{"raw":"capital of France"}',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract concise, factual knowledge from the source text."
      INSTRUCTION_QUERY = "Formulate a focused retrieval query for relevant facts."
      INSTRUCTION_RESPONSE = "Return a concise answer using only retrieved knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              return ("x" * 5000)[:1000]
  
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
